--- a/index.html
+++ b/index.html
@@ -15,95 +15,84 @@
 
         <div class="container">
 
-            <div class="info_des">
 
-                <!-- description on the chair -->
-                <div class="chair_heading">Modern chair</div>
+            <div class="intro_wrap">
 
-                <h2 class="chair_subheading">Telford Legress</h2>
+                <div class="section-heading">Modern Chair</div>
 
-                <h4 class="chair_amount">
-                    $245 <span>$543</span>
-                </h4>
+                <h2 class="section-subheading">Telford Longue</h2>
 
-                <div class="section_fluid">
-
-                    <input class="desc-btn" type="radio" id="desc-1" name="desc-btn" checked />
-					<label for="desc-1">Description</label>
-					<input class="desc-btn" type="radio" id="desc-2" name="desc-btn" />
-					<label for="desc-2">Details</label>
-
-                    <div class="section-fluid desc-sec accor-1">
-						<p>
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id totam tempora enim officia
-							veritatis hic.
-						</p>
-					</div>
-
-                    <div class="section-fluid desc-sec accor-2">
-						<div class="section-inline">
-							<p><span>80</span>cm<br />Length</p>
-						</div>
-						<div class="section-inline">
-							<p><span>65</span>cm<br />Width</p>
-						</div>
-						<div class="section-inline">
-							<p><span>90</span>cm<br />Height</p>
-						</div>
-						<div class="section-inline">
-							<p><span>17.6</span>lbs<br />Weight</p>
-						</div>
-					</div>
-
+                <div class="amount">
+                    $299 <span>$400</span>
                 </div>
 
-                <h5>Choose Color:</h5>
+                <input type="radio" name="data" id="desc" class="choice1 desc-btn desc-det" checked>
+                <label for="desc" class="section-desc">Description</label>
+
+                <input type="radio" name="data" id="det" class="choice2 desc-btn desc-det">
+                <label for="det" class="section-desc">Details</label>
+
+                <div class="description desc-sec">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id totam tempora enim officia veritatis hic.</p>
+                </div>
+
+                <div class="details desc-sec">
+                    <div class="section-inline">
+                        <p><span>80</span>cm<br />Length</p>
+                    </div>
+                    <div class="section-inline">
+                        <p><span>65</span>cm<br />Width</p>
+                    </div>
+                    <div class="section-inline">
+                        <p><span>90</span>cm<br />Height</p>
+                    </div>
+                    <div class="section-inline">
+                        <p><span>17.6</span>lbs<br />Weight</p>
+                    </div>
+                </div>
+
+                <h4 class="choice-color">Choose Color:</h4>
+
 
             </div>
 
-            <!-- color of the chairs -->
+            <input type="radio" name="color-btn" id="color-1" class="color-btn for-color-1" checked>
+            <label for="color-1" class="btn-color-1"></label>
 
-            <input type="radio" name="choose_color" id="chair-color-1" class="chair_color chair_btn_1" checked>
-            <label for="chair-color-1" class="color_lebel_1"></label>
+            <input type="radio" name="color-btn" id="color-2" class="color-btn for-color-2" >
+            <label for="color-2" class="btn-color-2"></label>
 
-            <input type="radio" name="choose_color" id="chair-color-2" class="chair_color chair_btn_2" >
-            <label for="chair-color-2" class="color_lebel_2"></label>
+            <input type="radio" name="color-btn" id="color-3" class="color-btn for-color-3">
+            <label for="color-3" class="btn-color-3"></label>
 
-            <input type="radio" name="choose_color" id="chair-color-3" class="chair_color chair_btn_3" >
-            <label for="chair-color-3" class="color_lebel_3"></label>
+            <input type="radio" name="color-btn" id="color-4" class="color-btn for-color-4">
+            <label for="color-4" class="btn-color-4"></label>
 
-            <input type="radio" name="choose_color" id="chair-color-4" class="chair_color chair_btn_4" >
-            <label for="chair-color-4" class="color_lebel_4"></label>
+            <input type="radio" name="color-btn" id="color-5" class="color-btn for-color-5">
+            <label for="color-5" class="btn-color-5"></label>
 
-            <input type="radio" name="choose_color" id="chair-color-5" class="chair_color chair_btn_5" >
-            <label for="chair-color-5" class="color_lebel_5"></label>
+            <input type="radio" name="color-btn" id="color-6" class="color-btn for-color-6">
+            <label for="color-6" class="btn-color-6"></label>
 
-            <input type="radio" name="choose_color" id="chair-color-6" class="chair_color chair_btn_6" >
-                <label for="chair-color-6" class="color_lebel_6"></label>
-
-
-            <!-- button -->
-            <div class="button_atc">
-                <a href="#" class="btn"><i class="fa-sharp fa-solid fa-cart-shopping"></i>Add To Cart</a>
-            </div>
-
-            <!-- background images -->
-
-            <div class="img-wrap chair1"></div>
-            <div class="img-wrap chair2"></div>
-            <div class="img-wrap chair3"></div>
-            <div class="img-wrap chair4"></div>
-            <div class="img-wrap chair5"></div>
-            <div class="img-wrap chair6"></div>
-            <div class="back-color"></div>
-            <div class="back-color color-2"></div>
-            <div class="back-color color-3"></div>
-            <div class="back-color color-4"></div>
-            <div class="back-color color-5"></div>
-            <div class="back-color color-6"></div>
+            <div class="info-wrap btn">
+				<a href="#"><i class="fa-sharp fa-solid fa-cart-shopping"></i> Add To Cart</a>
+			</div>
+			<div class="img-wrap chair-1"></div>
+			<div class="img-wrap chair-2"></div>
+			<div class="img-wrap chair-3"></div>
+			<div class="img-wrap chair-4"></div>
+			<div class="img-wrap chair-5"></div>
+			<div class="img-wrap chair-6"></div>
+			<div class="back-color chair-1"></div>
+			<div class="back-color chair-2"></div>
+			<div class="back-color chair-3"></div>
+			<div class="back-color chair-4"></div>
+			<div class="back-color chair-5"></div>
+			<div class="back-color chair-6"></div>
 
 
         </div>
+
 
     </div>
     
